fixed spacing for the column cards

--- a/css/responsive/desktop.css
+++ b/css/responsive/desktop.css
@@ -60,6 +60,6 @@
 
   .column {
     width: 280px;
-    padding: 10px;
+    padding: 0 10px;
   }
 }
